Fix sidebar dropdowns on iPhone.

--- a/resources/css/reset.css
+++ b/resources/css/reset.css
@@ -51,4 +51,5 @@ table {
 
 button {
 	border: 0px;
+	background-color: inherit;
 }
